--- a/styles.css
+++ b/styles.css
@@ -30,30 +30,35 @@ body {
     grid-auto-flow: column;
 }
 
-.nav {
-}
+.nav {}
 
-.wrapper.header{
+.wrapper.header {
     grid-area: 2 / 2 / 2 / 5;
 }
-.wrapper>.header{
+
+.wrapper>.header {
     display: grid;
     grid-template-columns: 1fr auto auto auto;
     grid-auto-flow: column;
 }
+
 button.new {}
+
 button.upload {}
+
 button.share {}
 
-.wrapper.side-bar{
+.wrapper.side-bar {
     background-color: #1992d4;
     grid-area: 1 / 1 / 5 / 1;
 }
-.wrapper>.side-bar{
+
+.wrapper>.side-bar {
     display: grid;
     gap: 25px 0;
 }
-.main-btns{
+
+.main-btns {
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: auto 1fr;
@@ -102,12 +107,61 @@ button.share {}
 }
 
 .wrapper.main-content {
+    display: flex;
     background-color: #e2e8f0;
     grid-area: 3 / 2 / 5 / 5;
 }
-.wrapper>.main-content{
+
+.wrapper>.main-content {
     display: grid;
+    grid-template-rows: min-content auto min-content auto;
+    grid-template-columns: 2fr 1fr;
+    padding: 1rem;
 }
-.projects {}
-.announcements {}
-.trending {}
+
+.main-content h3 {
+    margin: 0 20px;
+}
+
+.header-proj h3 {
+    grid-area: 1/1/1/1;
+}
+
+.projects {
+    display: grid;
+    grid-area: 2 / 1 / 5 / 1;
+    grid-template-columns: auto auto;
+    /* place-items: center; */
+    gap: 20px;
+    margin: 20px;
+}
+
+.projects > div {
+    display: flex;
+    flex-direction: column;
+    min-height: 200px;
+    justify-content: center;
+    background-color: white;
+    border: solid 1px lightgrey;
+    border-radius: 12px;
+}
+
+.projects >div>*{
+    padding: 15px;
+}
+
+.header-announce h3 {
+    grid-area: 1/2/1/3;
+}
+
+.announcements {
+    grid-area: 2/2/3/3;
+}
+
+.header-trending h3 {
+    grid-area: 3/2/4/3;
+}
+
+.trending {
+    grid-area: 4/2/5/3;
+}
