--- a/styles.css
+++ b/styles.css
@@ -195,9 +195,27 @@ p:first-child {
 .header-announce h3 {
     grid-area: 1/2/1/3;
 }
+.wrapper .announcements {
+    grid-area: 2/2/3/3;
+    margin: 20px;
+}
+
 
 .announcements {
-    grid-area: 2/2/3/3;
+    display: flex;
+    flex-direction: column;
+    min-height: 200px;
+    background-color: white;
+    background-size: contain;
+    border: solid 1px lightgrey;
+    border-radius: 12px;
+}
+
+.announcement-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 15px;
 }
 
 .header-trending h3 {
