--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-rows: auto auto repeat(2, 1fr);
     grid-template-columns: 1fr 4fr;
-    height: 100vh;
+    min-height: 100vh;
     border: none;
 }
 
@@ -28,8 +28,20 @@
     height: 25px;
 }
 
+.nav img.search-icon:hover {
+    transform: scale(1.1); 
+    transition: 0.2s;
+    cursor: pointer;
+}
+
 .nav img.notifications-icon {
     margin-left: 50px;
+}
+
+.nav img.notifications-icon:hover {
+    transform: scale(1.1); 
+    transition: 0.2s;
+    cursor: pointer;
 }
 
 .nav input {
@@ -39,10 +51,12 @@
     height: 25px;
 }
 
+img.user-avatar,
 .nav .user-avatar {
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    background-color: #e2e8f0;
 }
 
 .nav .user-name {
@@ -62,7 +76,7 @@
 
 .wrapper.header {
     grid-area: 2 / 2 / 2 / 5;
-    margin: 0 50px;
+    margin: 20px 50px;
 }
 
 .wrapper>.header {
@@ -105,6 +119,12 @@
     width: 75px;
     height: 35px;
     font-weight: 700;
+}
+
+.header button:hover {
+    transform: scale(1.1); 
+    transition: 0.2s;
+    cursor: pointer;
 }
 
 .wrapper.side-bar {
@@ -174,6 +194,9 @@
 
 .btns button:hover {
     color: lightgray;
+    transform: scale(1.1); 
+    transition: 0.2s;
+    cursor: pointer;
 }
 
 .wrapper.main-content {
@@ -253,22 +276,28 @@ p:first-child {
     padding: 5px;
 }
 
+.card-btns img:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
 .header-announce h3 {
     grid-area: 1/2/1/3;
 }
 .wrapper-announcements {
     grid-area: 2/2/3/3;
     margin: 20px;
+    display: flex;
 }
 
 
 .announcements {
     display: flex;
     flex-direction: column;
-    /* min-height: 200px; */
     background-color: white;
     border-radius: 12px;
     padding: 10px;
+    justify-content: space-evenly;
 }
 
 .announcement-card {
@@ -302,4 +331,40 @@ p:first-child {
 
 .trending {
     grid-area: 4/2/5/3;
+    display: flex;
+}
+
+.wrapper-trending {
+    background-color: white;
+    border-radius: 12px;
+    padding: 10px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex: 1;
+}
+
+.user-trending {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: min-content auto;
+    gap: 0 10px;
+    margin: 15px;
+}
+
+.user-trending img {
+    grid-area: 1 / 1 / 3 / 1;
+}
+
+.user-trending > .user-name {
+    align-self: end;
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.user-trending > .user-title {
+    align-self: start;
+    font-size: 0.8rem;
+    color: #636363;
 }
